[gd_scene load_steps=2 format=3 uid="uid://fg30gqkyh6pv"]

[ext_resource type="Script" uid="uid://2xce1olntqti" path="res://Lista4/Exercicio1/Tarefa/TarefaButton.gd" id="1_8jjww"]

[node name="TarefaButton" type="PanelContainer"]
custom_minimum_size = Vector2(250, 45)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_8jjww")

[node name="_" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Texto" type="RichTextLabel" parent="_"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "tarefa"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConcluirButton" type="Button" parent="_"]
unique_name_in_owner = true
layout_mode = 2
text = "Concluir"

[node name="DeletarButton" type="Button" parent="_"]
layout_mode = 2
text = "Deletar"

[connection signal="pressed" from="_/ConcluirButton" to="." method="_on_concluir_button_pressed"]
[connection signal="pressed" from="_/DeletarButton" to="." method="_on_deletar_button_pressed"]
